# basic-nes-emulator

./: .gitignore  CMakeLists.txt  GoogleTest.cmake  README.md  SourceList.cmake
include/nes/bus/: bus.h  ibus.h
include/nes/cpu/: registers.h
lib/nes/: CMakeLists.txt
lib/nes/include/nes/bus/: bus.h  ibus.h
lib/nes/include/nes/cpu/: registers.h
lib/nes/include/nes/cpu/bus/: bus.h  ibus.h
lib/nes/include/nes/cpu/clock/: debug_clock.h  iclock_sink.h  iclock_source.h  isubscriber_clock_source.h
lib/nes/include/nes/cpu/instructions/: base_instruction.h  iinstruction.h  iinstruction_decoder.h  iinstruction_error_handler.h  iinstructionset.h  instruction_decoder.h  instructions.h  instructionset.h
lib/nes/include/nes/peripherals/: ipheripheral.h  memory.h
lib/nes/src/nes/bus/: bus.cpp
lib/nes/src/nes/cpu/bus/: bus.cpp
lib/nes/src/nes/cpu/clock/: debug_clock.cpp
lib/nes/src/nes/cpu/instructions/: base_instruction.cpp  instruction_decoder.cpp  instructions.cpp  instructionset.cpp
lib/nes/src/nes/peripherals/: memory.cpp
lib/nes/tests/: CMakeLists.txt  bus-tests.cpp  instruction-decoder-tests.cpp  instruction-tests.cpp  memory-tests.cpp
src/: main.cpp
tests/: CMakeLists.txt  bus-tests.cpp  testtest.cpp
